@@ -1,3 +1,8 @@
+2008-01-29  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* ProvideAlternativeNamesForOperatorOverloadsTest.cs: Add 
+	"override Equals" in EverythingIsThere class.
+
 2008-01-27  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* TypesShouldBeInsideNamespacesTest.cs: Adapt nested types test 
